boost1.67 (1.67.0-1) UNRELEASED; urgency=medium

  [ Dimitri John Ledkov ]
  * coroutine2 is no longer excludable library, adjust debian/rules.
  * Cherrypick upstream patch to fix python module_init symbol visibility.
  * Further fixup boost-mpi-python library tag
  * Correct mpi python extension suffix, as per PEP-3149.

  [ Giovanni Mascellani ]
  * New upstream release.
  * Add myself as uploader.
  * Enable hardening flags.
  * Rewrite debian/copyright in better detail.

 -- Dimitri John Ledkov <xnox@ubuntu.com>  Thu, 26 Oct 2017 10:14:47 +0100

boost1.65.1 (1.65.1+dfsg-1) unstable; urgency=medium

  [ Steve M. Robbins ]
  * New upstream.
  * Remove "Force use g++-6"
  * patches/chrono-duration.patch: Remove.  Obsoleted by upstream changes.
  * New package for Python.NumPy.  Closes: #853734.
  * New packages for Boost.Container, Boost.Stacktrace.

  [ Dimitri John Ledkov ]
  * Fixup py3 suffixes and symlinks.
  * In asciidoctor docs, do not use external webfonts.
  * In doxygen docs, use local mathjax library.

 -- Dimitri John Ledkov <xnox@ubuntu.com>  Wed, 25 Oct 2017 15:27:28 +0100

boost1.63 (1.63.0+dfsg-1) unstable; urgency=medium

  * New upstream.

 -- Steve M. Robbins <smr@debian.org>  Wed, 28 Dec 2016 20:28:31 -0600

boost1.62 (1.62.0+dfsg-4) unstable; urgency=medium

  * New patch upstream-add-degree-reverse_graph.patch.

 -- Steve M. Robbins <smr@debian.org>  Sat, 12 Nov 2016 12:46:50 -0600

boost1.62 (1.62.0+dfsg-3) unstable; urgency=high

  * Build Boost.Python 2 & 3 bindings in separate builddirs. Closes: #842927

 -- Dimitri John Ledkov <xnox@ubuntu.com>  Mon, 07 Nov 2016 18:44:37 +0000

boost1.62 (1.62.0+dfsg-2) unstable; urgency=medium

  * Limit boost-fiber packages to architectures it is built on.

 -- Dimitri John Ledkov <xnox@ubuntu.com>  Thu, 20 Oct 2016 08:36:55 +0100

boost1.62 (1.62.0+dfsg-1) unstable; urgency=medium

  * New upstream 1.62.
  * Add packages for Boost.Fiber.